# RTC_Meeting_Demo

./: README.md
Windows/RTCSolution/: CMakeLists.txt  main.cpp
Windows/RTCSolution/cmake/: common.cmake  meeting.cmake
Windows/RTCSolution/core/: Configer.h  Util.cpp  application.h  callback_helper.cc  callback_object.h  common_define.h  component_interface.h  module_interface.h  module_navigator.cc  navigator_interface.h  rtc_engine_wrap.cpp  rtc_engine_wrap.h  session_base.cc  session_base.h  timer_helper.cc  timer_helper.h  timer_object.h  util_error.cc  util_uuid.cc
Windows/RTCSolution/core/component/: alert.cc  alert.h  check_button.h  image_button.cpp  image_button.h  input_dlg.cpp  input_dlg.h  input_dlg.ui  label_warp.h  line_edit_warp.cpp  menu_warp.cpp  push_button_warp.cpp  push_button_warp.h  share_view_wnd.cpp  share_view_wnd.h  toast.h  videocell.cpp  videocell.h  volume_widget.h
Windows/RTCSolution/core/http/: http.h
Windows/RTCSolution/feature/: data_mgr.h  defination.h  logger.cpp  logger.h  scene_select.ui  scene_select_module.cc  scene_select_module.h  scene_select_widget.cpp  scene_select_widget.h  top_bar_widget.cpp  top_bar_widget.h
Windows/RTCSolution/feature/joinRTS_params_kit/: rtc_build_config.h  rts_params.cc  rts_params.h
Windows/RTCSolution/feature/login_kit/: login.ui  login_widget.cpp  login_widget.h
Windows/RTCSolution/meeting/: meeting_module.cc
Windows/RTCSolution/meeting/Common/: check_label.h  error_tips.cc  error_tips.h  hint_tips.h  info_dlg.h  list_view_wrap.cc  login_controller_widget.cc  login_controller_widget.h  login_controller_widget.ui  meeting_list_item.cc  meeting_list_item.h  meeting_quit_dlg.ui  meeting_setting.cc  side_widget.cc  side_widget.h  side_widget.ui  video_widget.h  warning_tips.cc
Windows/RTCSolution/meeting/Core/: data_mgr.h  meeting_model.h  meeting_rtc_wrap.cc  meeting_rtc_wrap.h  page_manager.cc  page_manager.h  utils.cc  worker.cc  worker.h
Windows/RTCSolution/meeting/Feature/login/: meeting_login.cc  meeting_login.ui
Windows/RTCSolution/meeting/Feature/main/: global_button_bar.cc  global_button_bar.h  global_button_bar.ui  info_view.h  info_view.ui  main_page.cc  main_page.h  main_page.ui
Windows/RTCSolution/meeting/Feature/speech/: speech_widget.cc  speech_widget.ui
Windows/RTCSolution/resource/: app.manifest  resource.qrc
Windows/RTCSolution/resource/translations/: common_zh_CN.ts
Windows/veRTC_Demo_Windows/: CMakeLists.txt  main.cpp
Windows/veRTC_Demo_Windows/cmake/: common.cmake  meeting.cmake
Windows/veRTC_Demo_Windows/core/: application.cc  application.h  callback_helper.h  callback_object.cc  common_define.h  configer.cpp  constants.h  module_interface.h  module_navigator.cc  module_navigator.h  navigator_interface.h  rtc_engine_wrap.cpp  rtc_engine_wrap.h  session_base.cc  session_base.h  timer_object.cc  util.cpp  util.h  util_error.cc  util_error.h  util_tip.cc  util_tip.h  util_uuid.cc  util_uuid.h
Windows/veRTC_Demo_Windows/core/component/: OnLineItem.cpp  OnLineItem.h  TreeGroupWidget.cpp  TreeGroupWidget.h  alert.cc  check_button.cpp  image_button.cpp  input_dlg.cpp  input_dlg.h  input_dlg.ui  label_warp.cpp  line_edit_warp.h  list_widget_warp.cpp  list_widget_warp.h  menu_warp.h  push_button_warp.cpp  push_button_warp.h  share_view_container.cpp  share_view_container.h  share_view_wnd.cpp  toast.cpp  videocell.cpp  videocell.h  volume_widget.cpp
Windows/veRTC_Demo_Windows/core/http/: http.cpp  http.h  networkhttpreply.cpp
Windows/veRTC_Demo_Windows/feature/: data_mgr.h  defination.h  logger.cpp  scene_select.ui  scene_select_module.h  scene_select_widget.cpp  scene_select_widget.h  top_bar_widget.cpp  top_bar_widget.h
Windows/veRTC_Demo_Windows/feature/rts_params/: rtc_build_config.h  rts_params.cc
Windows/veRTC_Demo_Windows/feature/username_login/: username_login.ui  username_login_widget.cpp  username_login_widget.h
Windows/veRTC_Demo_Windows/meeting/: meeting_module.cc  meeting_module.h
Windows/veRTC_Demo_Windows/meeting/Common/: call_exp_dlg.cc  call_exp_dlg.h  call_exp_dlg.ui  check_button.cc  check_label.cc  error_tips.cc  feed_back_dlg.cc  feed_back_dlg.h  feed_back_dlg.ui  hint_tips.cc  info_dlg.cc  info_dlg.ui  list_view_wrap.h  meeting_list_item.cc  meeting_list_item.ui  meeting_quit_dlg.cc  meeting_quit_dlg.h  meeting_setting.cc  meeting_setting.h  meeting_setting.ui  share_screen_widget.cc  share_screen_widget.h  share_screen_widget.ui  share_view_container.cc  share_view_container.h  share_view_wnd.cc  share_view_wnd.h  tips_dlg.cc  tips_dlg.h  tips_dlg.ui  utils.cc  utils.h  video_widge.h  video_widget.cc  warning_tips.h
Windows/veRTC_Demo_Windows/meeting/Core/: data_mgr.cc  data_mgr.h  meeting_model.h  meeting_notify.cc  meeting_notify.h  meeting_rtc_wrap.cc  meeting_rtc_wrap.h  meeting_session.cc  meeting_session.h  page_manager.cc  page_manager.h  utils.cc  utils.h
Windows/veRTC_Demo_Windows/meeting/Feature/login/: meeting_login.cc  meeting_login.h  meeting_login.ui
Windows/veRTC_Demo_Windows/meeting/Feature/main/: global_button_bar.cc  info_view.cc  main_page.cc  main_page.ui
Windows/veRTC_Demo_Windows/meeting/Feature/normal/: normal_widget.cc  normal_widget.h  normal_widget.ui
Windows/veRTC_Demo_Windows/meeting/Feature/speech/: speech_widget.h
Windows/veRTC_Demo_Windows/meeting/Resource/: meeting_resource.qrc
Windows/veRTC_Demo_Windows/resource/: resource.qrc  resource.rc.in
Windows/veRTC_Demo_Windows/vertc_sdk/include/: bytertc_room_event_handler.h  bytertc_video.h  bytertc_video_event_handler.h
Windows/veRTC_Demo_Windows/vertc_sdk/include/rtc/: bytertc_audio_defines.h  bytertc_audio_device_manager.h  bytertc_common_defines.h  bytertc_engine_event_handler.h  bytertc_engine_interface.h  bytertc_publicstream_interface.h  bytertc_transcoder_define.h  bytertc_video_defines.h  byterts_event_handler.h  byterts_interface.h  byterts_room_event_handler.h  byterts_room_interface.h
Windows/veRTC_Demo_Windows/vertc_sdk/lib/Win32/: VolcEngineRTC.lib
Windows/veRTC_Demo_Windows/vertc_sdk/lib/x64/: VolcEngineRTC.lib
(+338 files in other folders)
